[project]
name = "promoting_pi_planner"
version = "2024.1"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<3.9"
authors = [
    { name = "Patrick Halder", email = "patrick.halder@zf.com" },
    { name = "Hannes Homburger", email = "hhomburg@htwg-konstanz.de" },
    { name = "Lothar Kiltz", email = "lothar.kiltz@zf.com" },
    { name = "Johannes Reuter", email = "jreuter@htwg-konstanz.de" },
    { name = "Matthias Althoff", email = "althoff@tum.de" }    
]

description = "A path-integral (PI) based motion planner utilizing Signal Temporal Logic (STL) costs."

dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "treelib>=1.7.0",
    "scipy>=1.10.1",
    "gurobipy>=11.0.2",
    "optuna>=4.0.0",
    "tabulate>=0.9.0",
    "pymoo==0.6.1.1"
]

classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.8",
    "Operating System :: POSIX :: Linux",
]

[build-system]
requires = [
    "scikit-build-core~=0.8.0",
    "pybind11~=2.11.1",
]
build-backend = "scikit_build_core.build"
minimum-version = "0.8"
cmake.version = ">=3.24"
